# shops_tg_fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  test.db
app/: celery_app.py  main.py  schemas.py  test.db  test_sqlalchemy.py
app/alembic/: env.py
app/backend/: db.py
app/daemons/5ka/: products_parser.py
app/daemons/five/: products_parser.py
app/models/: category.py  product_store.py  products.py  store.py  users.py
app/routers/: auth.py  category.py  products.py  store.py
app/telegram_bot/: bot.py
